<resources>
    <string name="app_name">FUTSale</string>
    <string name="notification_fcm_channel_group_name">Other</string>
    <string name="notification_fcm_channel_name_miscellaneous">Miscellaneous</string>
    <string name="notification_pick_up_player_channel_group_name">Pick Up Player</string>
    <string name="notification_pick_up_player_channel_name_default">Default</string>
    <string name="notification_pick_up_player_channel_name_silent">Silent</string>
    <string name="notification_pick_up_player_channel_description_pick_up_player">This notification will be shown after a player is picked up</string>
    <string name="notification_permission_rational_message">You won\'t receive a notification after a player is picked up without Notification Permission.</string>
    <string name="notification_permission_rational_btn_positive">OK</string>
    <string name="notification_permission_rational_btn_negative">Cancel</string>
    <string name="permissions_error_notification_declined">This app requires notifications permission to receive notifications.</string>
    <string name="permissions_error_notification_declined_permanently">It looks like you\'ve permanently denied notifications permission. You can go to the app settings to grant it.</string>
    <string name="permissions_error_btn_open_settings">App Settings</string>
    <string name="permissions_error_btn_confirm">Confirm</string>
    <string name="error_something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="error_network_connection_unavailable">Unable to connect to the internet.</string>
    <string name="error_network_too_many_requests">You\'ve sent too many requests in a short time. Please wait before trying again.</string>
    <string name="error_network_failure">You\'re having network issues. Please try again later.</string>
    <string name="error_network_serialization">Something went wrong while trying to process the data.</string>
    <string name="error_network_json_conversion">Something went wrong while trying to process the data.</string>
    <string name="error_network_ssl_handshake">Unable to establish a secure connection. Please ensure your device\'s date and time are set correctly and try again.</string>
    <string name="error_network_cert_path_validator">Unable to establish a secure connection due to a server issue.</string>
    <string name="error_intent_app_not_found">There is no app on the phone to handle this action.</string>
    <string name="error_btn_retry">Retry</string>
    <string name="error_btn_confirm">Confirm</string>
    <string name="core_content_description_back">Return</string>
    <string name="core_textfield_content_description_password_toggle_show">Show Password</string>
    <string name="core_textfield_content_description_password_toggle_hide">Hide Password</string>
    <string name="core_platform_console">Console</string>
    <string name="core_platform_pc">PC</string>
    <string name="onboarding_first_title">Selling Coins Has Made Easy</string>
    <string name="onboarding_first_description">This application uses the DSFUT API for trading FUT coins. Here you can quickly sell your coins and immediately get paid for them.</string>
    <string name="onboarding_first_btn_skip">Skip</string>
    <string name="onboarding_first_btn_next">Next</string>
    <string name="onboarding_second_title">Pick Up A Player</string>
    <string name="onboarding_second_description">After choosing your game platform, click the Auto Pick Up button to start looking for a player. Then wait until a player pops.</string>
    <string name="onboarding_second_btn_next">Next</string>
    <string name="onboarding_second_btn_back">Back</string>
    <string name="onboarding_third_title">Buy A Player</string>
    <string name="onboarding_third_description">Go to the transfer page of the game and find the player card in the market, and then buy it within 3 minutes.</string>
    <string name="onboarding_third_btn_next">Next</string>
    <string name="onboarding_third_btn_back">Back</string>
    <string name="onboarding_fourth_title">You need to enter your DSFUT account\'s partner ID and secret key to use the application.</string>
    <string name="onboarding_fourth_title_partner_id">Partner ID</string>
    <string name="onboarding_fourth_hint_partner_id">Enter your partner ID</string>
    <string name="onboarding_fourth_title_secret_key">Secret Key</string>
    <string name="onboarding_fourth_hint_secret_key">Enter your secret key</string>
    <string name="onboarding_fourth_btn_register"><![CDATA[If you don\'t have a DSFUT account, <font color="#%s"><b>click here</b></font> to create one.]]></string>
    <string name="onboarding_fourth_btn_start">Get Started</string>
    <string name="onboarding_fourth_btn_agreement"><![CDATA[By logging in, you agree to our <font color="#%s"><b>Privacy Policy</b></font>.]]></string>
    <string name="home_nav_title_pick_up_player">Pick Up</string>
    <string name="home_nav_title_profile">Profile</string>
    <string name="home_nav_title_history">History</string>
    <string name="home_nav_title_settings">Settings</string>
    <string name="home_app_update_sheet_title">New update available</string>
    <string name="home_app_update_sheet_message">We recommend updating %s to the latest version for a more enjoyable experience.</string>
    <string name="home_app_update_sheet_btn_update">Update</string>
    <string name="home_app_update_sheet_btn_dismiss">Not now</string>
    <string name="home_app_update_message">Update downloaded successfully! To complete the installation, please restart the app.</string>
    <string name="home_app_update_action">Restart</string>
    <string name="home_app_review_dialog_title">Rate %s?</string>
    <string name="home_app_review_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="home_app_review_dialog_btn_rate_now">Rate now</string>
    <string name="home_app_review_dialog_btn_remind_later">Remind me later</string>
    <string name="home_app_review_dialog_btn_never">No, Thanks</string>
    <string name="pick_up_player_app_bar_title">Pick Up Player</string>
    <string name="pick_up_player_latest_player_timer" translatable="false">%1$s:%2$s</string>
    <string name="pick_up_player_latest_player_timer_expired">Expired</string>
    <string name="pick_up_player_latest_player_title_chemistry_style">Chemistry Style:</string>
    <string name="pick_up_player_latest_player_title_start_price">Start Price:</string>
    <string name="pick_up_player_latest_player_title_buy_now_price">Buy Now Price:</string>
    <string name="pick_up_player_title_instruction">Follow the steps below to buy a player:</string>
    <string name="pick_up_player_text_instruction"><![CDATA[1. Choose your game platform.<br>2. If you want, you can enter your desired minimum or maximum price for a player. (Optional)<br>3. Click the <font color="#%s"><b>Auto Pick Up</b></font> button to start looking for a player. You can also request only once by clicking the <b>Pick Once</b> button.<br>4. Wait until a player pops.]]></string>
    <string name="pick_up_player_title_platform">Platform:</string>
    <string name="pick_up_player_segmented_btn_platform_console">Console</string>
    <string name="pick_up_player_segmented_btn_platform_pc">PC</string>
    <string name="pick_up_player_title_min_price">Min Price</string>
    <string name="pick_up_player_hint_min_price" translatable="false">10000</string>
    <string name="pick_up_player_title_max_price">Max Price</string>
    <string name="pick_up_player_hint_max_price" translatable="false">50000</string>
    <string name="pick_up_player_title_take_after">Pick up the player with delay?</string>
    <string name="pick_up_player_title_take_after_zero">Pick the player after %d seconds.</string>
    <string name="pick_up_player_title_take_after_one">Pick the player after %d second.</string>
    <string name="pick_up_player_title_take_after_two">Pick the player after %d seconds.</string>
    <string name="pick_up_player_title_take_after_few">Pick the player after %d seconds.</string>
    <string name="pick_up_player_title_take_after_many">Pick the player after %d seconds.</string>
    <string name="pick_up_player_title_take_after_other">Pick the player after %d seconds.</string>
    <string name="pick_up_player_helper_optional">Optional</string>
    <string name="pick_up_player_btn_pick_auto">Auto Pick Up</string>
    <string name="pick_up_player_btn_pick_auto_cancel">Cancel</string>
    <string name="pick_up_player_btn_pick_once">Pick Once</string>
    <string name="pick_up_player_error_blank_partner_id">Please enter your partner ID in the Profile page.</string>
    <string name="pick_up_player_error_invalid_partner_id">Please enter your partner ID in the Profile page.</string>
    <string name="pick_up_player_error_blank_secret_key">Please enter your secret key in the Profile page.</string>
    <string name="pick_up_player_error_blank_partner_id_and_secret_key">Please enter your partner ID and secret key in the Profile page.</string>
    <string name="pick_up_player_error_invalid_min_price">Please enter a valid price.</string>
    <string name="pick_up_player_error_invalid_max_price">Please enter a valid price.</string>
    <string name="pick_up_player_error_invalid_take_after">Please enter a valid time.</string>
    <string name="pick_up_player_error_dsfut_block_zero">You have been temporarily blocked due to picking up a player and not redeeming it. Please try again in %d minutes.</string>
    <string name="pick_up_player_error_dsfut_block_one">You have been temporarily blocked due to picking up a player and not redeeming it. Please try again in %d minute.</string>
    <string name="pick_up_player_error_dsfut_block_two">You have been temporarily blocked due to picking up a player and not redeeming it. Please try again in %d minutes.</string>
    <string name="pick_up_player_error_dsfut_block_few">You have been temporarily blocked due to picking up a player and not redeeming it. Please try again in %d minutes.</string>
    <string name="pick_up_player_error_dsfut_block_many">You have been temporarily blocked due to picking up a player and not redeeming it. Please try again in %d minutes.</string>
    <string name="pick_up_player_error_dsfut_block_other">You have been temporarily blocked due to picking up a player and not redeeming it. Please try again in %d minutes.</string>
    <string name="pick_up_player_error_dsfut_empty">There are no players available for redemption.</string>
    <string name="pick_up_player_error_dsfut_limit">The limit of redeemed players has been exceeded. It is allowed to have a maximum of 3 active players.</string>
    <string name="pick_up_player_error_dsfut_maintenance">The service is temporarily unavailable due to technical work.</string>
    <string name="pick_up_player_error_dsfut_parameters">One or all of the entered parameters are invalid.</string>
    <string name="pick_up_player_error_dsfut_signature">Please check the entered values for the partner ID and secret key in the Profile page.</string>
    <string name="pick_up_player_error_dsfut_authorization">Authorization failed.</string>
    <string name="pick_up_player_error_dsfut_throttle">The number of requests has been exceeded. It is allowed to make 10 requests per 10 seconds.</string>
    <string name="pick_up_player_error_dsfut_unix_time">Unix time error.</string>
    <string name="pick_up_player_error_dsfut_canceled">Auto pick player canceled.</string>
    <string name="pick_up_player_error_btn_open_profile">Open Profile</string>
    <string name="pick_up_player_notification_successful_title">%s was picked up successfully</string>
    <string name="pick_up_player_notification_failed_title">Auto pick up player failed</string>
</resources>