<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="@dimen/height_0dp"
            android:layout_marginHorizontal="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_onboarding_4th" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:fontFamily="@font/localized_extra_bold"
            android:gravity="start"
            android:lineHeight="@dimen/text_size_24sp"
            android:text="@string/onboarding_fourth_title"
            android:textAlignment="gravity"
            android:textColor="@color/navyBlue"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_partner_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:targetApi="p" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_partner_id"
            style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
            android:labelFor="@+id/ti_layout_partner_id"
            android:text="@string/onboarding_fourth_title_partner_id"
            app:layout_constraintBottom_toTopOf="@+id/ti_layout_partner_id"
            app:layout_constraintEnd_toEndOf="@id/ti_layout_partner_id"
            app:layout_constraintStart_toStartOf="@id/ti_layout_partner_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_layout_partner_id"
            style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_4dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_secret_key"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_partner_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_edit_partner_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/localized_regular"
                android:hint="@string/onboarding_fourth_hint_partner_id"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColorHint="@color/grayDark"
                android:textSize="@dimen/text_size_16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_secret_key"
            style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
            android:layout_marginTop="@dimen/margin_16dp"
            android:labelFor="@+id/ti_layout_secret_key"
            android:text="@string/onboarding_fourth_title_secret_key"
            app:layout_constraintBottom_toTopOf="@+id/ti_layout_secret_key"
            app:layout_constraintEnd_toEndOf="@id/ti_layout_secret_key"
            app:layout_constraintStart_toStartOf="@id/ti_layout_secret_key"
            app:layout_constraintTop_toBottomOf="@+id/ti_layout_partner_id" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_layout_secret_key"
            style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_4dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_secret_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_edit_secret_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/localized_regular"
                android:hint="@string/onboarding_fourth_hint_secret_key"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColorHint="@color/grayDark"
                android:textSize="@dimen/text_size_16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Theme.FifaUltimateTeamCoin.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_3dp"
            android:layout_marginTop="@dimen/margin_3dp"
            android:layout_marginBottom="@dimen/margin_75dp"
            android:fontFamily="@font/localized_light"
            android:gravity="center_vertical|start"
            android:maxWidth="@dimen/max_width_1000dp"
            android:maxLines="2"
            android:text="@string/onboarding_fourth_btn_register"
            android:textAlignment="gravity"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="@+id/ti_layout_secret_key"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/ti_layout_secret_key"
            app:layout_constraintTop_toBottomOf="@+id/ti_layout_secret_key" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            style="@style/Theme.FifaUltimateTeamCoin.Button"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_11dp"
            android:text="@string/onboarding_fourth_btn_start"
            app:layout_constraintBottom_toTopOf="@+id/btn_agreement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpi"
            style="@style/Theme.FifaUltimateTeamCoin.LoadingProgressBar.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="@+id/btn_start"
            app:layout_constraintStart_toStartOf="@+id/btn_start"
            app:layout_constraintTop_toTopOf="@+id/btn_start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_agreement"
            style="@style/Theme.FifaUltimateTeamCoin.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_3dp"
            android:layout_marginBottom="@dimen/margin_11dp"
            android:fontFamily="@font/localized_light"
            android:gravity="center_vertical|start"
            android:maxWidth="@dimen/max_width_1000dp"
            android:maxLines="2"
            android:text="@string/onboarding_fourth_btn_agreement"
            android:textAlignment="gravity"
            android:textColor="@color/grayDark"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>